--- a/src/index.css
+++ b/src/index.css
@@ -152,4 +152,24 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 20px;
+}
+@media (max-width: 600px) {
+  .home-title {
+    font-size: 20px;
+    max-width: 100%;
+    margin-bottom: 50px;
+  }
+  .myimage {
+    width: 100%;
+    height: 150px;
+  }
+  .me {
+    font-size: 15px;
+    height: 200px;
+  }
+  .skill {
+    font-size: 20px;
+    width: 100%;
+  }
 }
