--- a/src/index.css
+++ b/src/index.css
@@ -157,13 +157,14 @@
   background-color: #333;
   color: #fff;
   padding: 1%;
-  margin-top: 5px;
+  padding-top: 1px;
+  padding-bottom: 10px;
 
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 20px;
+  height: 40px;
 }
 @media (max-width: 600px) {
   .myimage {
