--- a/src/index.css
+++ b/src/index.css
@@ -1,110 +1,18 @@
-.contact {
-  max-width: 500px;
-  margin: 70px auto;
-  padding: 20px;
-  background-color: rgb(65, 30, 30);
-  border: 3px solid rgb(136, 173, 190);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0.1);
-  color: #ddd;
-  margin-bottom: 200px;
+body{
+  background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
 }
-.contact-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(29, 29, 49);
-
-  color: #ddd;
-}
-/* Add this to your CSS file */
 .message {
   max-height: 100px;
   height: 50px;
   margin: 50px;
   width: 200px;
 }
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(29, 29, 49);
-  color: #ddd;
-}
-.home-title {
-  text-align: center;
-  padding: 20px;
-  margin-top: 5px;
-  margin-bottom: 20px;
-  font-size: 20px;
-  padding-top: 50px;
-  background: black;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 60px;
-  transform: scale(0);
-  opacity: 0;
-  transition: all 0.5s ease-in-out;
-  max-width: 200px;
-  animation: popup-animation 2s forwards;
-}
-.home-title.visible {
-  transform: scale(1);
-  opacity: 1;
-}
 
-.skill {
-  background-color: rgb(29, 29, 49);
-  color: #ddd;
-}
-.myskills {
-  max-width: 500px;
-  margin: 20px auto;
-  padding: 10px;
-  border: 3px solid rgb(136, 173, 190);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0.1);
-  margin-bottom: 100px;
-  background-color: rgb(65, 30, 30);
-}
 
-.me {
-  max-width: 100px;
-  margin: 70px auto;
-  padding: 50px;
-  border: 3px solid rgb(136, 173, 190);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0.1);
-  color: #e4e1e1;
-  margin-bottom: 200px;
-  max-height: 400px;
-  max-width: 500px;
-  margin-bottom: 200px;
-  margin-top: 50px;
-  background-color: rgb(65, 30, 30);
-}
 
-.todo {
-  background-color: rgb(65, 30, 30);
-  max-width: 400px;
-  color: white;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0.1);
-  margin-bottom: 100px;
-  margin-top: 50px;
-}
-.link {
-  color: rgb(127, 241, 123);
-}
 
 .footer {
-  background-color: #333;
-  color: #fff;
+  color: black;
   padding: 1%;
   padding-top: 1px;
   padding-bottom: 10px;
@@ -130,21 +38,21 @@
   position: relative;
 }
 
-.hamburger {
-  position: absolute;
+ .hamburger {
+  position: relative;
   top: 1px;
   left: 10px;
   cursor: pointer;
   font-size: 24px;
   display: block;
-}
+  color: black;
+} 
 
 .nav-links {
   list-style: circle;
   display: none;
   flex-direction: column;
   position: relative;
-  background-color: black;
   top: 50px;
   left: 0;
   max-width: 100px;
@@ -166,13 +74,5 @@
 
 .nav-links li a {
   text-decoration: none;
-  color: white;
   margin-right: 300px;
-}
-
-.projecttitle {
-  color: rgb(190, 158, 158);
-}
-.projects-container {
-  background: rgb(29, 29, 49);
 }
